--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,12 +3,134 @@ background-color: plum
 }
 .gif {
   background-image: url("https://media.giphy.com/media/12aW3WO37L1tw4/giphy.gif");
+
   height: 400px;
   width: 280px;
-  margin-left: 550px;
-  margin-top: 70px
+  background-color: pink
+  
 }
 h1 {
   font-family: 'Leckerli One', cursive;
-  margin-left: 510px
+
 }
+.link {
+  color: white;
+
+}
+.firstimage {
+  background-image: url("https://scopula.storeland.ru/design/7/1731/226/1.jpg");
+
+height: 500px
+}
+.about {
+  
+  width: 700px;
+  height: 450px;
+  font-size: 20px
+}
+.third {
+  width: 300px;
+  height: 390px;
+  font-size: 20px
+}
+h2 {
+  font-family: 'Sofia', cursive;
+}
+.name {
+  margin-left: 550px
+}
+/* .firstgif {
+  background-image: url("https://media.giphy.com/media/10FXH0H9j1ok/giphy.gif");
+  height: 400px;
+  width: 280px */
+
+
+.container {
+  display: flex;
+  flex-direction: row;
+ align-content: center;
+ justify-content: space-around;
+ align-items: center;
+ margin-top: 50px
+}
+
+.image2 {
+  display: flex;
+  flex-direction: row;
+ align-content: center;
+ justify-content: space-around;
+ align-items: center;
+ background-image: url("");
+ width: 100%;
+   height: 1000px;
+}
+.firstloc, .secloc, .thirdloc {
+  color: black;
+  width: 340px;
+  font-size: 30px;
+  font-family: 'Baloo Thambi', cursive;
+  font-size: 30px;
+  margin-top: -780px;
+  margin-left: 70px
+}
+.toate {
+  display: flex;
+  flex-direction: row;
+ align-content: center;
+ justify-content: space-around;
+ align-items: center;
+}
+
+.toate1 {
+  display: flex;
+  flex-direction: row;
+ align-content: center;
+ justify-content: space-around;
+ align-items: center;
+ margin-top: -760px
+}
+
+.locdoi{
+background-image: url("https://i.pinimg.com/564x/31/70/cf/3170cf67fae251f4663126c1ab9be245.jpg");
+width: 430px;
+height: 410px;
+border: 2px solid black;
+}
+.loctrei {
+  background-image: url("https://i.pinimg.com/564x/f4/67/10/f46710fc74334bc3bef4c87bd84e99ba.jpg");
+width: 400px;
+height: 410px;
+border: 2px solid black;
+}
+.locpatru {
+  background-image: url("https://i.pinimg.com/564x/e5/98/a4/e598a46ba149c17b96a51a80e863a046.jpg");
+  border: 2px solid black;
+width: 430px;
+height: 410px
+}
+.doi {
+  background-image: url("https://i.pinimg.com/564x/f2/15/11/f21511f9f322291f8fe4287f79fe133f.jpg");
+  width: 430px;
+  height: 600px;
+  border: 2px solid black;
+}
+.trei {
+  background-image: url("https://i.pinimg.com/564x/bb/20/1e/bb201ef896e0376118ae53e1e1dd28f1.jpg");
+  width: 510px;
+  height: 600px;
+  border: 2px solid black;
+}
+.patru {
+  background-image: url("https://i.pinimg.com/564x/87/ae/5b/87ae5bca80459ed6e6425df2b6777cdb.jpg");
+  width: 430px;
+  height: 600px;
+  border: 2px solid black;
+}
+.secgif {
+  background-image: url("https://media.giphy.com/media/UnWKnBEzIzIqY/giphy.gif");
+  width: 600px;
+  height: 300px
+}
+/* .totul {
+  background-color: palevioletred
+} */
